@@ -17,13 +17,15 @@ package PostScript::Report::Types;
 # ABSTRACT: type library for PostScript::Report
 #---------------------------------------------------------------------
 
-our $VERSION = '0.01';
+our $VERSION = '0.03';
+
+use Carp 'confess';
 
 use MooseX::Types -declare => [qw(
-  BorderStyle Component Container FontObj FontMetrics HAlign
-  Parent Report RptValue VAlign
+  BorderStyle BWColor Color Component Container FontObj FontMetrics HAlign
+  Parent Report RGBColor RptValue VAlign
 )];
-use MooseX::Types::Moose qw(Str);
+use MooseX::Types::Moose qw(ArrayRef Num Str);
 
 enum(BorderStyle, qw(0 1));
 
@@ -52,6 +54,32 @@ subtype Parent,
 
 enum(VAlign, qw(bottom top));
 
+#---------------------------------------------------------------------
+subtype BWColor,
+  as Num,
+  where { $_ >= 0 and $_ <= 1 };
+
+subtype RGBColor,
+  as ArrayRef[BWColor],
+  where { @$_ == 3 };
+
+coerce RGBColor,
+  from Str,
+  via {
+    # Must have a multiple of 3 hex digits after initial '#':
+    /^#((?:[0-9a-f]{3})+)$/i or confess "Invalid color $_";
+
+    my $color = $1;
+
+    my $digits = int(length($color) / 3); # Number of digits per color
+    my $max    = hex('F' x $digits);      # Max intensity per color
+
+    [ map { hex(substr($color, $_ * $digits, $digits)) / $max } 0 .. 2 ];
+  };
+
+subtype Color,
+  as BWColor|RGBColor;
+
 1;
 
 __END__
@@ -65,6 +93,15 @@ These are the custom types used by L<PostScript::Report>.
 =head2 BorderStyle
 
 A valid border style (C<0> or C<1>)
+
+=head2 Color
+
+This is a number in the range 0 to 1 (where 0 is black and 1 is
+white), or an arrayref of three numbers C<[ Red, Green, Blue ]> where
+each number is in the range 0 to 1.
+
+In addition, you can specify an RGB color in the HTML hex triplet form
+prefixed by C<#> (like C<#FFFF00> or C<#FF0> for yellow).
 
 =head2 Component
 
